--- a/index.html
+++ b/index.html
@@ -1,7 +1,72 @@
-<html>
-    <head>
-        <title>
-            FARREL BOS
-        </title>
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ZettaXUPNVYK_HTML</title>
+    <link rel="icon" href="./UPN.png" type="image/x-icon">
+</head>
+
+<body>
+    <div style="text-align: center;">
+
+        <h1>ZettaCamp</h1>
+        <p><i>ZettaByteXUPNVYK</i></p>
+        <span>
+            13 Oktober 2022 <br>
+            UPN "Veteran" Yogyakarta
+        </span>
+        <div style="text-align: left;">
+            <h2>Task 1</h2>
+            <table class="center">
+                <tr>
+                    <th>Nama</th>
+                    <th>:</th>
+                    <th>Farrel Cahyo A</th>
+                </tr>
+                <tr>
+                    <th>Asal</th>
+                    <th>:</th>
+                    <th>Temanggung</th>
+                </tr>
+                <tr>
+                    <th>Jurusan</th>
+                    <th>:</th>
+                    <th>Sistem Informasi, UPN Veteran Yogyakarta</th>
+                </tr>
+                <tr>
+                    <th>Tentang Saya</th>
+                    <th>:</th>
+                    <th><span>Seorang mahasiswa yang berkuliah di Universitas UPN "Veteran" Yogyakarta dengan program
+                            studi <b>Sistem Informasi</b>, dan sedang mengikuti pelatihan ZettaCamp.
+                        </span></th>
+                </tr>
+                <tr>
+                    <th>Hobi</th>
+                    <th>:</th>
+                    <th>Tidur</th>
+                </tr>
+                <tr>
+                    <th>Media Sosial</th>
+                    <th>:</th>
+                    <th><a href="https://facebook.com/farel.awangga.92/">
+                            <img alt="Facebook"
+                                src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/2048px-Facebook_f_logo_%282019%29.svg.png"
+                                width=30" height="30">
+                        </a>
+                        <a href="https://www.instagram.com/__rrel/">
+                            <img alt="Instagram" src="asssets/Instagram_logo_2016.svg.webp" width=30" height="30">
+                        </a>
+
+                    </th>
+                </tr>
+            </table>
+        </div>
+
+
+    </div>
+</body>
+
 </html>
