--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZettaXUPNVYK_HTML</title>
-    <link rel="icon" href="./UPN.png" type="image/x-icon">
+    <link rel="icon" href="UPN.png" type="image/x-icon">
 </head>
 
 <body>
@@ -57,7 +57,7 @@
                                 width=30" height="30">
                         </a>
                         <a href="https://www.instagram.com/__rrel/">
-                            <img alt="Instagram" src="asssets/Instagram_logo_2016.svg.webp" width=30" height="30">
+                            <img alt="Instagram" src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-instagram-new-circle-512.png" width=30" height="30">
                         </a>
 
                     </th>
