--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <th>Tentang Saya</th>
                     <th>:</th>
                     <th><span>Seorang mahasiswa yang berkuliah di Universitas UPN "Veteran" Yogyakarta dengan program
-                            studi <b>Sistem Informasi</b>, dan sedang mengikuti pelatihan ZettaCamp.
+                            studi <u>Sistem Informasi</u>, dan sedang mengikuti pelatihan ZettaCamp.
                         </span></th>
                 </tr>
                 <tr>
