--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                     <th>Media Sosial</th>
                     <th>:</th>
                     <th>1. <a href="https://facebook.com/farel.awangga.92/">
-                        Facebook
-                            <!-- <img alt="Facebook"
+                            <img alt="Facebook"
                                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/2048px-Facebook_f_logo_%282019%29.svg.png"
-                                width=30" height="30"> -->
+                                width=30" height="30">
+                            <span> Farrel Cahyo Awangga </span>
                         </a>
 
                     </th>
@@ -72,10 +72,20 @@
                     <th></th>
                     <th></th>
                     <th>2. <a href="https://www.instagram.com/__rrel/">
-                            Instagram
-                            <!-- <img alt="Instagram" src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-instagram-new-circle-512.png" width=30" height="30"> -->
+                            <img alt="Instagram" src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-instagram-new-circle-512.png" 
+                            width=30" height="30">
+                            <span> @__rrel </span>
                         </a>
-
+                    </th>
+                </tr>
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <th>3. <a href="https://github.com/FarrelCahyo/">
+                            <img alt="Github" src="https://cdn1.iconfinder.com/data/icons/logotypes/32/github-512.png" 
+                            width=30" height="30">
+                            <span> FarrelCahyo </span>
+                        </a>
                     </th>
                 </tr>
             </table>
