--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZettaCamp FarrelCA</title>
-    <link rel="icon" href="UPN.png" type="image/x-icon">
+    <link rel="icon" href="http://upnyk.ac.id/public/frontend/images/logo-upn.png" type="image/x-icon">
 </head>
 
 <body>
