--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             UPN "Veteran" Yogyakarta
         </span>
         <div style="text-align: left;">
-            <h1><center>Task 1</center></h1>
+            <h1><center>Task 2</center></h1>
+            <img src="https://instagram.fjog3-1.fna.fbcdn.net/v/t51.2885-19/106464272_912644055900899_8603175386848077626_n.jpg?stp=dst-jpg_s150x150&_nc_ht=instagram.fjog3-1.fna.fbcdn.net&_nc_cat=111&_nc_ohc=HEgZ796cSt4AX_7647M&edm=ACWDqb8BAAAA&ccb=7-5&oh=00_AT9IAYOMbFc50hSioaE2rz6MrR2idHs7U_0_sZ88DgniPA&oe=6354841E&_nc_sid=1527a3">
             <table style="margin-left:auto; margin-right:auto;">
                 <tr>
                     <th>Nama</th>
@@ -59,33 +60,48 @@
                 <tr>
                     <th>Media Sosial</th>
                     <th>:</th>
-                    <th>1. <a href="https://facebook.com/farel.awangga.92/">
-                            <img alt="Facebook"
-                                src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/2048px-Facebook_f_logo_%282019%29.svg.png"
-                                width=30" height="30">
-                            <span> Farrel Cahyo Awangga </span>
-                        </a>
-
-                    </th>
-                </tr>
-                <tr>
-                    <th></th>
-                    <th></th>
-                    <th>2. <a href="https://www.instagram.com/__rrel/">
-                            <img alt="Instagram" src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-instagram-new-circle-512.png" 
-                            width=30" height="30">
-                            <span> @__rrel </span>
-                        </a>
-                    </th>
-                </tr>
-                <tr>
-                    <th></th>
-                    <th></th>
-                    <th>3. <a href="https://github.com/FarrelCahyo/">
-                            <img alt="Github" src="https://cdn1.iconfinder.com/data/icons/logotypes/32/github-512.png" 
-                            width=30" height="30">
-                            <span> FarrelCahyo </span>
-                        </a>
+                    <th>
+                        <table>
+                            <tr>
+                                <th>
+                                    1. <img alt="Facebook"
+                                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/2048px-Facebook_f_logo_%282019%29.svg.png"
+                                    width=30" height="30">
+                                </th>
+                                <th>
+                                    :
+                                </th>
+                                <th>
+                                    <a href="https://facebook.com/farel.awangga.92/">Farrel Cahyo Awangga</a>
+                                </th>
+                            </tr>
+                            <tr>
+                                <th>
+                                    2. <a href="https://www.instagram.com/__rrel/">
+                                        <img alt="Instagram" src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-instagram-new-circle-512.png" 
+                                        width=30" height="30">
+                                </th>
+                                <th>
+                                    :
+                                </th>
+                                <th>
+                                    <a href="https://www.instagram.com/__rrel/">@__rrel</a>
+                                </th>
+                            </tr>
+                            <tr>
+                                <th>
+                                    3. <a href="https://github.com/FarrelCahyo/">
+                                        <img alt="Github" src="https://cdn1.iconfinder.com/data/icons/logotypes/32/github-512.png" 
+                                        width=30" height="30">
+                                </th>
+                                <th>
+                                    :
+                                </th>
+                                <th>
+                                    <a href="https://github.com/FarrelCahyo/">FarrelCahyo</a>
+                                </th>
+                            </tr>
+                        </table>
                     </th>
                 </tr>
             </table>
