--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZettaCamp FarrelCA</title>
     <link rel="icon" href="http://upnyk.ac.id/public/frontend/images/logo-upn.png" type="image/x-icon">
+    <style>
+        table, th, td {
+            border: 1px solid black;
+        }
+        th, td {
+            padding: 10px;
+        }
+    </style>
 </head>
 
 <body>
@@ -56,7 +64,31 @@
                 <tr>
                     <th>Hobi</th>
                     <th>:</th>
-                    <th>Tidur</th>
+                    <th style="text-align: left;">
+                        <ul style="list-style: none;">
+                            <li>
+                                <details>
+                                    <summary>
+                                        Mendengarkan Musik
+                                    </summary>
+                                    <audio src="OPMem.mp3" controls loop>
+                                        Browser anda tidak mendukung musik ini
+                                    </audio>
+                                </details>
+                            </li>
+                            <li>
+                                <details>
+                                    <summary>
+                                        Menonton Video
+                                    </summary>
+                                    <iframe src="https://www.youtube.com/embed/7FEyjd2hNSk" frameborder="0" allowfullscreen></iframe>
+                                </details>
+                            </li>
+                            <li>
+                                Tidur
+                            </li>
+                        </ul>
+                    </th>
                 </tr>
                 <tr>
                     <th>Media Sosial</th>
@@ -97,8 +129,17 @@
                         </a>
                     </th>
                 </tr>
+                <tr>
+                    <th>Input Form</th>
+                    <th>:</th>
+                    <th>
+                        <a href="input.html">
+                            Klik disini
+                        </a>
+                    </th>
+                </tr>
             </table>
-            <hr>
+            <br><br><hr>
         </div>
 
 
